# study

./: dummy-3d-segmentation.py  einsum.ipynb  gradient_descent.ipynb
math/: dft_viz.py  fourier.py
mmul/: CMakeLists.txt
mmul/baseline/: benchmark.cpp
mmul/blocked/: benchmark.cpp
pcd/: depth_to_pcd.py  kdtree.ipynb  pca.ipynb
pytorch-learning/: coursera_practice_project.ipynb
